# launcher

./: .gitignore  CHANGELOG.md  README.md  package.json
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: README.md  ci.yml  release.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_updater.rs  launcher.rs  lib.rs  mod_updater.rs  mods.rs
src/components/: AppUpdater.vue  FeedView.vue  ModItem.vue  ModUpdater.vue  ModsActions.vue  ModsView.vue  OptionsView.vue  PlayView.vue  ProgressBar.vue
src/composables/: useUpdater.ts
