[package]
name = "launcher"
version = "0.1.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
valve-server-query = "0.4"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
libloading = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1.0", features = ["fs"] }
tokio-stream = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
zip = "4"
sha2 = "0.10"
thiserror = "1.0"
